--- a/src/templates/pagare-template.html
+++ b/src/templates/pagare-template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <style>
       body {
-        font-family: "Times New Roman", serif;
+        font-family: "Calibri", Arial, sans-serif;
         margin: 40px;
         font-size: 14px;
         line-height: 1.4;
@@ -37,11 +37,27 @@
   <body>
     <div class="header">Fecha: {{fecha}}</div>
 
-    <h1>Pagaré</h1>
+    <h1>PAGARÉ 1/1</h1>
 
     <div class="section">
-      Yo <strong>{{cliente}}</strong>, con domicilio en
-      <strong>{{domicilio}}</strong>, reconozco deber y me obligo
+      Por este pagaré prometo (emos) y me (nos) obligo (amons) a pagar
+      incondicionalmente a la orden de __________________________________
+      en su domicilio ubicado en ________________________________________
+      Dolores Hidalgo, Gto. la cantidad de ${{monto}} MXN ({{monto}}), mediante
+      16 pagos SEMANALAES consecutivos. de acuerdo la cual causará intereses a
+      razón de tasa fija mensual del {{interes}}% mismo que será pagaderos por
+      semanas vencidas. Si el importe total o proporcional correspondiente a
+      este pagaré no fuere pagado a su vencimiento, causará intereses moratorios
+      a razón de la tasa que se resulte de multiplicar por 1.8 veces la ultima
+      Tasa de interés Ordinaria. Dichos intereses se causaran desde la fecha en
+      que incurra en el inclumplimiento hasta la regularización de los pagos.
+      <br />
+      <br />
+
+      El (los) suscritores su(s), se somenten expresamente para el caso de
+      controversia judicial, a la competencia de los tribunales de la ciudad de
+      DOLORES HIDALGO, GTO el {{fecha}}. Yo <strong>{{cliente}}</strong>, con
+      domicilio en <strong>{{domicilio}}</strong>, reconozco deber y me obligo
       incondicionalmente a pagar a la orden de
       <strong>CONVAM FINANCIERA</strong>, la cantidad de:
     </div>
